# QIF

./: .gitignore  .travis.yml  BitTaint.h  CMakeLists.txt  README.md  match_info.pl  start.py  test_vs_traces.pl  testall.sh
BitTaint/: BitTaint.cpp  BitTaint.h  BitTaint.hpp  Dataflow.cpp  Memory.cpp  Memory.h  Memory.hpp
BitTaint/MyPinTool/: MyPinTool.cpp
LoopDetection/: LoopDetection.cpp
MyPinTool/: RefMaker.cpp  makefile.rules
Ngram/: Ngram.cpp
Ngram/pintools/: MyPinToolLinux.cpp
QIF/: QIF.cpp
QIF/pintools/: MyPinToolLinux.cpp
QIF_EXP/: QIF_EXP.cpp
StaticSE/: StaticSE.cpp  disassembler.py
SymbolicExecution/: SymbolicExecution.cpp
TaintTool/: MyPinTool.cpp  MyPinToolLinux.cpp  makefile.rules
TaintTrace/: TaintTrace.cpp
disassembler/: disassembler.py  rc4
examples/Encrypted/client/: clientMain.cpp
examples/Encrypted/server/: serverMain.cpp
examples/PlainText/client/: clientMain.cpp
examples/PlainText/server/: serverMain.cpp
lib/: BitVector.cpp  BitVector.h  BitVector.hpp  Blocks.cpp  Blocks.h  Blocks.hpp  CallStack.cpp  CallStack.h  Constrains.cpp  Constrains.h  DebugInfo.cpp  DebugInfo.h  DynSEEngine.cpp  DynSEEngine.h  ELFInfo.cpp  ELFInfo.h  Engine.cpp  Engine.h  Engine.hpp  Function.cpp  Function.h  Function.hpp  LibcModel.cpp  LibcModel.hpp  Loop.cpp  Loop.h  MonteCarlo.cpp  MonteCarlo.h  MonteCarlo.hpp  QIFSEEngine.cpp  QIFSEEngine.h  Register.cpp  Register.h  Register.hpp  SEEngine.cpp  SEEngine.h  StaticSEEngine.cpp  StaticSEEngine.h  StaticSEEngine.hpp  Tainter.cpp  (+21 more)
papers/SP2020_June_1/: main.bbl  main.tex  refs.bib
papers/SP2020_June_1/figures/: RA.gstencil  Result.numbers  form2figure.py  result2formLatex.py  running_time_figure.py  secretCF.graffle  workflow.graffle  workflow.gstencil
papers/SP2020_June_1/sample_code/: background.c  dependent.c  entropy.c
papers/SP2020_June_1/sections/: appendix.tex  background.tex  challenge.tex  conclusion.tex  design.tex  discussion.tex  evaluation.tex  example.tex  implementation.tex  introduction.tex  mc.tex  mcmc.tex  motivation.tex  overview.tex  quantification.tex  related_work.tex  scalability.tex  threat_model.tex  trace_qif.tex
references/mbedtls/aes_128_cbc/: mbedtls_aes_crypt_ecb1.ref  mbedtls_aes_setkey_enc1.ref  mbedtls_aes_setkey_enc13.ref  mbedtls_aes_setkey_enc14.ref  mbedtls_aes_setkey_enc6.ref  mbedtls_aes_setkey_enc7.ref  mbedtls_aes_setkey_enc8.ref
references/mbedtls/aes_256_cbc/: mbedtls_aes_crypt_cbc3.ref  mbedtls_aes_setkey_enc1.ref  mbedtls_aes_setkey_enc10.ref  mbedtls_aes_setkey_enc12.ref  mbedtls_aes_setkey_enc4.ref  mbedtls_aes_setkey_enc5.ref  mbedtls_aes_setkey_enc7.ref
references/mbedtls/des_ecb/: mbedtls_des_crypt_ecb2.ref  mbedtls_des_setkey3.ref  mbedtls_des_setkey4.ref
references/mbedtls/md5/: mbedtls_md5_ret11.ref  mbedtls_md5_ret13.ref  mbedtls_md5_ret15.ref  mbedtls_md5_ret25.ref  mbedtls_md5_ret26.ref  mbedtls_md5_ret4.ref  mbedtls_md5_ret5.ref  mbedtls_md5_ret6.ref
references/mbedtls/sha1/: mbedtls_sha1_ret14.ref  mbedtls_sha1_ret26.ref  mbedtls_sha1_ret30.ref  mbedtls_sha1_ret5.ref  mbedtls_sha1_ret6.ref
references/mbedtls/sha512/: mbedtls_sha512_ret2.ref
references/mbedtls_new_reference/aes/: mbedtls_internal_aes_decrypt10.ref  mbedtls_internal_aes_decrypt14.ref  mbedtls_internal_aes_decrypt2.ref  mbedtls_internal_aes_decrypt21.ref  (+5 more)
references/openssl/: AES_set_encrypt_key1.ref  DES_set_key_checked10.ref  DES_set_key_checked11.ref  DES_set_key_checked12.ref  DES_set_key_checked2.ref  DES_set_key_checked6.ref  DES_set_key_checked7.ref  DES_set_key_checked9.ref  MD51.ref  MD52.ref  MD54.ref  MD55.ref  MD56.ref  RC4_set_key2.ref
references/referenceMaker/: FunctionNames.cpp  RefMaker.cpp  dedup.pl  makefile.rules
references/tinyshell/: aes_set_key2.ref  aes_set_key3.ref  sha1_finish1.ref  sha1_finish2.ref  sha1_finish3.ref
references/zlib/: uncompress10.ref  uncompress11.ref  uncompress17.ref  uncompress2.ref  uncompress7.ref  uncompress8.ref  uncompress9.ref
results/openssl/: AES_decrypt1.ref  AES_decrypt1.ref.txt  AES_encrypt1.ref  AES_encrypt1.ref.txt  AES_set_encrypt_key1.ref.txt  DES_set_key_checked1.ref  DES_set_key_checked1.ref.txt  DES_set_key_checked10.ref.txt  DES_set_key_checked11.ref.txt  DES_set_key_checked12.ref.txt  DES_set_key_checked2.ref.txt  DES_set_key_checked3.ref  DES_set_key_checked3.ref.txt  DES_set_key_checked4.ref  DES_set_key_checked4.ref.txt  DES_set_key_checked5.ref  DES_set_key_checked5.ref.txt  DES_set_key_checked6.ref.txt  DES_set_key_checked7.ref.txt  DES_set_key_checked8.ref  DES_set_key_checked8.ref.txt  DES_set_key_checked9.ref.txt  MD51.ref.txt  MD52.ref.txt  MD53.ref  MD53.ref.txt  MD54.ref.txt  MD55.ref.txt  MD56.ref.txt  RC41.ref  RC41.ref.txt  RC4_set_key1.ref  RC4_set_key2.ref.txt  RC4_set_key3.ref  RC4_set_key3.ref.txt
results/tinyshell/: aes_set_key1.ref.txt  aes_set_key2.ref.txt  aes_set_key3.ref.txt  aes_set_key4.ref  aes_set_key4.ref.txt  aes_set_key5.ref  aes_set_key5.ref.txt  sha1_finish1.ref.txt  sha1_finish2.ref.txt  sha1_finish3.ref.txt
results/zlib/: uncompress1.ref  uncompress1.ref.txt  uncompress10.ref.txt  uncompress11.ref.txt  uncompress16.ref  uncompress16.ref.txt  uncompress17.ref.txt  uncompress2.ref.txt  uncompress3.ref  uncompress3.ref.txt  uncompress4.ref  uncompress4.ref.txt  uncompress5.ref  uncompress5.ref.txt  uncompress7.ref.txt  uncompress8.ref.txt  uncompress9.ref.txt
shared/: Function.h  Loop.h  Register.h  SEEngine.cpp  SEEngine.h  Tainter.cpp  Tainter.h  VarMap.cpp  ins_parser.cpp  ins_types.cpp  ins_types.h  x86.cpp  x86.h
test/: debug_mbedtls_2.15.1.txt  debug_openssl_0.9.7.txt  test_bit.cpp  test_bitvector.cpp  test_cmd.cpp  test_constrain.cpp  test_debuginfo.cpp  test_debuginfo_str.cpp  test_elf.cpp  test_elf_sym.cpp  test_eval.cpp  test_random_num.cpp  test_x86.cpp
testVectors/: README
testVectors/pairs/: README
testVectors/regression/: README  run.pl
testVectors/traces/: process_traces.pl
tracer/: DynamicProcedures.cpp  MainExecutableTracer.cpp  MainExecutableTracer2.cpp  SharedLibraryDetection.cpp  makefile.rules  readme.txt
(+515 files in other folders)
